tests/compile_fail/effectful_stateful_arrow_extra_member.rs
#[path = "support/typed_effectful.rs"]
mod support;
use support::{First, Input, StatefulFirstAndSecond};

fn main() {
    let _ = obzenflow_dsl::effectful_stateful!(
        Input -> { First } => StatefulFirstAndSecond,
        effects: [],
        middleware: []
    );
}
